--- a/Frontend-Canvas/index.html
+++ b/Frontend-Canvas/index.html
@@ -11,33 +11,18 @@
 <body>
     <div class="game-container">
         <div id="board" class="board"></div>
+        <div class="sidebar">
+            <div>
+                <h2 id="current-player-name">Player 1</h2>
+                <div class="dice">
+                    <button id="dice-btn"> Roll Dice</button>
+                    <p>Dice result: <span id="dice-result"></span></p>
+                </div>
+            </div>
+        </div>
     </div>
-    <script>
-        const board = document.getElementById('board');
-        const snakes = {
-            16: 6, 47: 26, 49: 11, 56: 53, 62: 19,
-            64: 60, 87: 24, 93: 73, 95: 75, 98: 78
-        };
+    <script src="script.js">
 
-        const ladders = {
-            1: 38, 4: 14, 9: 31, 21: 42, 28: 84,
-            36: 44, 51: 67, 71: 91, 80: 100, 85: 97
-        };
-
-        for (let i = 0; i < 10; i = i + 2) {
-            for (let j = (i + 1) * 10; j > i * 10; j--) {
-                const cell = document.createElement('div');
-                console.log(j)
-                cell.textContent = j;
-                board.appendChild(cell);
-            }
-            for (let k = ((i + 1) * 10) + 1; k <= (i + 2) * 10; k++) {
-                const cell = document.createElement('div');
-                console.log(k)
-                cell.textContent = k;
-                board.appendChild(cell);
-            }
-        }
     </script>
 </body>
 
