added reset feature

--- a/Frontend-Canvas/index.html
+++ b/Frontend-Canvas/index.html
@@ -18,6 +18,7 @@
                     <button id="dice-btn"> Roll Dice</button>
                     <p>Dice result: <span id="dice-result"></span></p>
                 </div>
+                <button id="reset-btn">Reset Game</button>
             </div>
         </div>
     </div>
